# otis_ask

./: .gitignore  MANIFEST.in  README.md  main.py  pdf_reader.py  prompts.toml  publish.sh  pyproject.toml  requirements.txt  s3.py
ask_otis/: __init__.py  main.py  pdf_reader.py
otis_ask/: __init__.py  analysis.py  ao_checks.toml  checks.py  checks.toml  documentreader.py  ls_checks.toml  main.py  output.py  pdf_reader.py  pdfreader.py  prompting.py  prompts.toml  vso_checks.toml
