[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otis_ask"
version = "2.0.2"
description = "Library to analyse Settlement Agreements and labor contracts"
readme = "README.md"
authors = [{ name = "HP Harmsen", email = "hp@harmsen.nl" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "openai", "justai", "pytesseract", "pdf2image", "opencv-python", "pypdf", "rich", "justdays", "pillow", "rich",
    "numpy", "docx2txt"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "pytest", "build", "twine"]

[project.urls]
Homepage = "https://github.com/hpharmsen/otis_ask"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["otis_ask", "prompts.toml"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
"*" = ["*.txt"]
otis_ask = ["*.toml"]
